--- a/flask_app/app.ini
+++ b/flask_app/app.ini
@@ -3,6 +3,8 @@ module = wsgi:app
 master = true
 socket = /tmp/uwsgi.sock
 chmod-socket = 666
-wsgi-file = /var/www/flask_app/wsgi.py
-touch-reload = /var/www/flask_app/wsgi_reload
-logto = /var/www/flask_app/wsgi_logs/uwsgi.log
+wsgi-file = /var/www/flask_in_docker/flask_app/wsgi.py
+touch-reload = /var/www/flask_in_docker/flask_app/wsgi_reload
+# ログのローテーションは「logrotate」を利用する。
+logto = /var/log/uwsgi/uwsgi.log
+logfile-chmod = 666
