--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -4,6 +4,8 @@ Flask-WTF==1.0.1
 Flask-Migrate==4.0.0
 Flask-Seeder==1.2.0
 PyMySQL==1.0.2
+python-dotenv==0.19.2
 flask-sqlalchemy==3.0.2
-cryptography==38.0.4
+cryptography==38.0.0
+pyopenssl==22.1.0 # [CAUTION] https://github.com/pyca/pyopenssl/issues/1143
 uWSGI==2.0.21
