--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.2.2
 Flask-Login==0.6.2
 Flask-WTF==1.0.1
+wtforms[email]==1.3.0
 Flask-Migrate==4.0.0
 Flask-Seeder==1.2.0
 PyMySQL==1.0.2
