--- a/flask_app/static/package.json
+++ b/flask_app/static/package.json
@@ -7,8 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "jbox": "^1.3.3"
-  }
+  "license": "MIT"
 }
