--- a/flask_app/static/package.json
+++ b/flask_app/static/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bulma-toast": "^2.4.2"
+  }
 }
